# RobotTwin

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: launch.json
build-wasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
config/: firmware.yaml  robot.yaml
docs/: BOM.md  breadboard-wiring.md  cpp-core.md  digital-twin.md  firmware.md  linkage-geometry.md  wiring-and-bringup.md
engineering/: README.md
engineering/f3d/: rt-arm-3dof_linkages.f3d  rt-gearboxes_cycloidal.f3d  rt_base_pan.f3d  rt_forearm.f3d  rt_shaft_coupling.f3d  rt_upper_arm.f3d  rt_yaw_column.f3d
engineering/fusion/cycloidal_gearbox/: cycloidal_gearbox.manifest  cycloidal_gearbox.py
engineering/fusion/robot_linkages/: linkage_geometry.py  robot_linkages.manifest  robot_linkages.py
engineering/gearboxes/: README.md  gear_parameters.yaml
engineering/gearboxes/15_1/: rt_cyc15_cam.step  rt_cyc15_cam.stl  rt_cyc15_disc.step  rt_cyc15_disc.stl  rt_cyc15_housing.step  rt_cyc15_housing.stl  rt_cyc15_output.step
engineering/gearboxes/20_1/: rt_cyc20_cam.step  rt_cyc20_cam.stl  rt_cyc20_disc.step  rt_cyc20_disc.stl  rt_cyc20_housing.step  rt_cyc20_housing.stl  rt_cyc20_output.step  rt_cyc20_output.stl
engineering/gearboxes/archive/15_1/: rt_cyc15_cam.step  rt_cyc15_cam.stl  rt_cyc15_disc.step  rt_cyc15_disc.stl  rt_cyc15_housing.step  rt_cyc15_housing.stl  rt_cyc15_output.step
engineering/gearboxes/archive/20_1/: rt_cyc20_cam.step  rt_cyc20_cam.stl  rt_cyc20_disc.step  rt_cyc20_disc.stl  rt_cyc20_housing.step  rt_cyc20_housing.stl  (+2 more)
engineering/standard parts/: 608-2rs.STEP  6805-2rs.STEP  rt_shaft_coupling.step
engineering/step/: rt-arm-3dof_linkages.step  rt_base_pan.step  rt_forearm.step  rt_shaft_coupling.step  rt_upper_arm.step  rt_yaw_column.step
engineering/stl/: rt_base_pan.stl  rt_forearm.stl  rt_shaft_coupling.stl  rt_upper_arm.stl  rt_yaw_column.stl
firmware/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
firmware/components/robottwin_core/: CMakeLists.txt
firmware/src/: CMakeLists.txt  embedded_configs.cpp  embedded_configs.hpp  main.cpp  motion_controller.cpp  motion_controller.hpp  serial_console.cpp  serial_console.hpp  step_engine.cpp  step_engine.hpp  tmc2209.cpp  tmc2209.hpp
python/: audit_linkages.py  validate_cycloid.py
src/config/: config.hpp  load.cpp  load.hpp  yaml_lite.cpp  yaml_lite.hpp
src/drivetrain/: drivetrain.cpp  drivetrain.hpp  gearbox_model.cpp  gearbox_model.hpp
src/dynamics/: dynamics.cpp  dynamics.hpp
src/geometry/: collision.cpp  collision.hpp
src/hardware/: serial_protocol.cpp  serial_protocol.hpp
src/io/: waypoints.cpp  waypoints.hpp
src/kinematics/: kinematics.cpp  kinematics.hpp
src/math/: units.hpp  vec3.hpp
src/planning/: retime.cpp  retime.hpp  trajectory.cpp  trajectory.hpp
src/simulation/: metrics.cpp  metrics.hpp
src/wasm/: bindings.cpp
tests/: fixtures.hpp  harness.hpp  test_collision.cpp  test_drivetrain.cpp  test_gearbox_model.cpp  test_hardware_config.cpp  test_kinematics.cpp  test_main.cpp  test_retime.cpp  test_serial_protocol.cpp  test_trajectory.cpp  test_waypoints.cpp
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css
web/src/core/: api.ts  collision.test.ts  collision.ts  config.ts  drivetrain.test.ts  drivetrain.ts  dynamics.ts  gearboxModel.test.ts  gearboxModel.ts  kinematics.test.ts  kinematics.ts  metrics.ts  retime.test.ts  retime.ts  trajectory.ts  units.ts  waypoints.test.ts  waypoints.ts
web/src/state/: store.ts
web/src/three/: ReferenceFrame.tsx  RobotModel.tsx  Scene.tsx  WorkspaceQuadrants.tsx  WorkspaceShell.tsx  gizmo.tsx
web/src/ui/: GearboxPanel.tsx  MetricsPanel.tsx  PosePanel.tsx  controls.tsx
web/src/wasm/: robottwin.d.ts
web/test-waypoints/: cartesian_arc.csv  cartesian_mixed.csv  joint_space_sweep.csv
